Add html divs for results, css, images, additional js.

--- a/index.html
+++ b/index.html
@@ -12,53 +12,53 @@
       <div class="jumbotron">
         <h2>Stress Quiz</h2>
       </div>
-      <form id="transportation_survey">
+      <form id="stress_quiz">
         <div class="form-group">
           <p>Do you experience any of the following? Check all that apply.</p>
-          <input type="checkbox" name="warning-signs" value="bike"> Difficulty concentrating.<br>
-          <input type="checkbox" name="warning-signs" value="car">Feeling overwhelmed often.<br>
-          <input type="checkbox" name="warning-signs" value="carpool">Loss of appetite.<br>
-          <input type="checkbox" name="warning-signs" value="walk">Loss of sleep.<br>
-          <input type="checkbox" name="warning-signs" value="bus">Diffulculty falling and staying asleep.<br>
-          <input type="checkbox" name="warning-signs" value="train">Self medicating.<br>
-          <input type="checkbox" name="warning-signs" value="streetcar">Overeating/increase of appetite.<br>
-          <input type="checkbox" name="warning-signs" value="taxi">Binging behaviors.<br>
-          <input type="checkbox" name="warning-signs" value="rideshare">Increase intake in alcohol/excessive intake in aclohol.<br>
-          <input type="checkbox" name="warning-signs" value="skateboard">Reliance on substances.<br>
-          <input type="checkbox" name="warning-signs" value="rollerblade">Irritability.<br>
-          <input type="checkbox" name="warning-signs" value="scooter">Short temper.<br>
-          <input type="checkbox" name="warning-signs" value="other">General feeling of "being stressed out".<br>
+          <input type="checkbox" name="warning-signs" value="Difficulty concentrating"> Difficulty concentrating.<br>
+          <input type="checkbox" name="warning-signs" value="Feeling overwhelmed often">Feeling overwhelmed often.<br>
+          <input type="checkbox" name="warning-signs" value="Loss of appetite">Loss of appetite.<br>
+          <input type="checkbox" name="warning-signs" value="Loss of sleep">Loss of sleep.<br>
+          <input type="checkbox" name="warning-signs" value="Diffulculty falling and staying asleep">Diffulculty falling and staying asleep.<br>
+          <input type="checkbox" name="warning-signs" value="Self medicating">Self medicating.<br>
+          <input type="checkbox" name="warning-signs" value="Overeating/increase of appetite">Overeating/increase of appetite.<br>
+          <input type="checkbox" name="warning-signs" value="Binging behaviors">Binging behaviors.<br>
+          <input type="checkbox" name="warning-signs" value="Increase intake in alcohol/excessive intake in aclohol">Increase intake in alcohol/excessive intake in aclohol.<br>
+          <input type="checkbox" name="warning-signs" value="Reliance on substances">Reliance on substances.<br>
+          <input type="checkbox" name="warning-signs" value="Irritability">Irritability.<br>
+          <input type="checkbox" name="warning-signs" value="Short temper">Short temper.<br>
+          <input type="checkbox" name="warning-signs" value="General feeling of 'being stressed out'">General feeling of "being stressed out".<br>
         </div>
 
         <div class="form-group">
           <p>Do you suffer from any of the following health problems? Check all that apply.</p>
-          <input type="checkbox" name="health-symptons" value="bike"> Fatigue.<br>
-          <input type="checkbox" name="health-symptons" value="car">Chest pain/rapid heartbeat.<br>
-          <input type="checkbox" name="health-symptons" value="carpool">Jitters.<br>
-          <input type="checkbox" name="health-symptons" value="walk">Increase in colds/deacrese in immunity/feeling your health go down the gutter.<br>
-          <input type="checkbox" name="health-symptons" value="bus">Profuse sweating.<br>
-          <input type="checkbox" name="health-symptons" value="train">Forgetfulness<br>
-          <input type="checkbox" name="health-symptons" value="streetcar">High blood pressure.<br>
-          <input type="checkbox" name="health-symptons" value="taxi">Upset stomach.<br>
-          <input type="checkbox" name="health-symptons" value="rideshare">Being more emotional.<br>
-          <input type="checkbox" name="health-symptons" value="skateboard">Chronic back/neck pain.<br>
+          <input type="checkbox" name="health-symptoms" value="Fatigue"> Fatigue.<br>
+          <input type="checkbox" name="health-symptoms" value="Chest pain/rapid heartbeat.">Chest pain/rapid heartbeat.<br>
+          <input type="checkbox" name="health-symptoms" value="Jitters">Jitters.<br>
+          <input type="checkbox" name="health-symptoms" value="Increase in colds/deacrese in immunity/feeling your health go down the gutter.">Increase in colds/deacrese in immunity/feeling your health go down the gutter.<br>
+          <input type="checkbox" name="health-symptoms" value="Profuse sweating.">Profuse sweating.<br>
+          <input type="checkbox" name="health-symptoms" value="Forgetfulness">Forgetfulness<br>
+          <input type="checkbox" name="health-symptoms" value="High blood pressure.">High blood pressure.<br>
+          <input type="checkbox" name="health-symptoms" value="Upset stomach.">Upset stomach.<br>
+          <input type="checkbox" name="health-symptoms" value="Being more emotional.">Being more emotional.<br>
+          <input type="checkbox" name="health-symptoms" value="Chronic back/neck pain.">Chronic back/neck pain.<br>
         </div>
 
         <div class="form-group">
           <p>How do you deal with stress?</p>
-          <input type="checkbox" name="coping-methods" value="bike"> Pet a cat/dog/animal.<br>
-          <input type="checkbox" name="coping-methods" value="car">Meditation.<br>
-          <input type="checkbox" name="coping-methods" value="carpool">Listen to music.<br>
-          <input type="checkbox" name="coping-methods" value="walk">Going for a stroll/exercise/be active.<br>
-          <input type="checkbox" name="coping-methods" value="bus">Video games.<br>
-          <input type="checkbox" name="coping-methods" value="train">Watching a movie (not excessively).<br>
-          <input type="checkbox" name="coping-methods" value="streetcar">Therapy/counseling.<br>
-          <input type="checkbox" name="coping-methods" value="taxi">Controlled breathing exercises.<br>
-          <input type="checkbox" name="coping-methods" value="rideshare">Talking to family/freinds.<br>
-          <input type="checkbox" name="coping-methods" value="skateboard">Manage your time.<br>
-          <input type="checkbox" name="coping-methods" value="rollerblade">Rollerblading.<br>
-          <input type="checkbox" name="coping-methods" value="scooter">Manage/reduce caffeine intake.<br>
-          <input type="checkbox" name="coping-methods" value="other">Keeping a journal.<br>
+          <input type="checkbox" name="coping-methods" value="Pet a cat/dog/animal."> Pet a cat/dog/animal.<br>
+          <input type="checkbox" name="coping-methods" value="Meditation.">Meditation.<br>
+          <input type="checkbox" name="coping-methods" value="Listen to music.">Listen to music.<br>
+          <input type="checkbox" name="coping-methods" value="Going for a stroll/exercise/be active.">Going for a stroll/exercise/be active.<br>
+          <input type="checkbox" name="coping-methods" value="Video games.">Video games.<br>
+          <input type="checkbox" name="coping-methods" value="Watching a movie (not excessively).">Watching a movie (not excessively).<br>
+          <input type="checkbox" name="coping-methods" value="Therapy/counseling.">Therapy/counseling.<br>
+          <input type="checkbox" name="coping-methods" value="Controlled breathing exercises.">Controlled breathing exercises.<br>
+          <input type="checkbox" name="coping-methods" value="Talking to family/freinds.">Talking to family/freinds.<br>
+          <input type="checkbox" name="coping-methods" value="Manage your time.">Manage your time.<br>
+          <input type="checkbox" name="coping-methods" value="Rollerblading.">Rollerblading.<br>
+          <input type="checkbox" name="coping-methods" value="Manage/reduce caffeine intake.">Manage/reduce caffeine intake.<br>
+          <input type="checkbox" name="coping-methods" value="Keeping a journal.">Keeping a journal.<br>
         </div>
 
        <button type="submit">Submit Survey</button>
@@ -70,9 +70,31 @@
       <span id="health-responses">
         <p><b>You experience the following health symptoms due to stress:</b></p>
       </span>
+      <br>
       <span id="coping-responses">
         <p><b>You use the following coping methods to deal with stress:</b></p>
       </span>
+      <br>
+      <br>
+      <div id="recs1">
+        <p id="recs1-header">Wow, you seem stressed omfg!!!! Here are some helpful resources:</p>
+        <p><a href="https://www.helpguide.org/articles/stress/quick-stress-relief.htm/" target="_blank">Help Guide</a></p>
+        <p><a href="https://www.mayoclinic.org/healthy-lifestyle/stress-management/basics/stress-relief/hlv-20049495" target="_blank">Mayo Clinic</a></p>
+        <p><a href="https://www.webmd.com/balance/guide/blissing-out-10-relaxation-techniques-reduce-stress-spot" target="_blank">Web MD</a></p>
+      </div>
+
+      <div id="recs2">
+        <p>You're engaging in some pretty healthy habits! Keep it up!</p>
+      </div>
+
+      <div id="recs3">
+        <p>It's dangerous to go alone, take this!</p>
+        <img src="img/kitten-1.jpg" alt="A photo of a kitten.">
+        <img src="img/kitten-2.jpg" alt="A photo of a kitten.">
+        <img src="img/kitten-3.jpg" alt="A photo of a kitten.">
+        <img src="img/kitten-4.jpg" alt="A photo of a kitten.">
+      </div>
+
     </div>
   </body>
 </html>
